# g4application-dicom

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  test.mac
cmake/: FindJsonCpp.cmake
doc/: materials.md
examples/: materials-water.json
include/: DicomComponent.hh  DicomData.hh  DicomGeometryBuilder.hh  DicomMaterialDatabase.hh  DicomMessenger.hh  DicomPlugin.hh  DicomReader.hh  DicomSlice.hh  MaterialDatabase.hh  MaterialJsonReader.hh  MaterialTemplate.hh  VMaterialDatabase.hh  VoxelParameterisation.hh  dicomConfiguration.hh
src/: DicomComponent.cc  DicomData.cc  DicomGeometryBuilder.cc  DicomMaterialDatabase.cc  DicomMessenger.cc  DicomPlugin.cc  DicomReader.cc  DicomSlice.cc  MaterialDatabase.cc  MaterialJsonReader.cc  MaterialTemplate.cc  VoxelParameterisation.cc
